--- a/BradyCodeChallenge/App.config
+++ b/BradyCodeChallenge/App.config
@@ -2,7 +2,7 @@
 <configuration>
 	<appSettings>
 		<add key="input" value="C:\BradyCodeChallenge\input"/>
-		<add key="referenceData" value="C:\BradyCodeChallenge\referencedata\ReferenceData.xml"/>
+		<add key="referenceData" value=".\ReferenceData\ReferenceData.xml"/>
 		<add key="output" value="C:\BradyCodeChallenge\output"/>
 		<add key="inputFileRegexPattern" value="*.xml*"/>
 	</appSettings>
